# KalaMake

./: .gitignore  CHANGES.md  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  TASKS.md  UPDATES.md  project.kmake
_external_shared/KalaCLI/debug/: KalaCLI1d.lib
_external_shared/KalaCLI/docs/: ecosystem.md
_external_shared/KalaCLI/release/: KalaCLI1.lib
_external_shared/KalaHeaders/: core_utils.hpp  file_utils.hpp  string_utils.hpp
docs/: how_to_use.md
include/: compile.hpp
include/core/: kma_core.hpp  kma_generate.hpp
include/generate/: kma_generate.hpp  kma_generate_ninja.hpp  kma_generate_vs.hpp  kma_generate_vscode.hpp
include/language/: kma_language.hpp  kma_language_c.hpp  kma_language_c_cpp.hpp  kma_language_cpp.hpp
src/: compile.cpp  main.cpp
src/core/: kma_core.cpp  kma_generate.cpp
src/generate/: kma_generate.cpp  kma_generate_ninja.cpp  kma_generate_vs.cpp  kma_generate_vscode.cpp
src/language/: kma_language.cpp  kma_language_c.cpp  kma_language_c_cpp.cpp  kma_language_cpp.cpp  kma_language_java.cpp  kma_language_rust.cpp  kma_language_zig.cpp
testing/c/: project_basic.kmake  project_exe.kmake
testing/cpp/: project.kmake  project_exe.kmake
testing/cpp/include/: log.hpp
testing/cpp/src/: main.cpp
testing/rust/: project_exe.kmake  project_shared.kmake  project_static.kmake
testing/zig/: project_exe.kmake  project_shared.kmake  project_static.kmake
